tests/invalid/type_error_in_arg.err_exp
type_error_in_arg.m:038: In clause for predicate `p'/2:
type_error_in_arg.m:038:   in unification of variable `X'
type_error_in_arg.m:038:   and term `t(A, B, C)':
type_error_in_arg.m:038:   type error in argument of functor `t'/3.
type_error_in_arg.m:038:   Argument 3 (C) has type
type_error_in_arg.m:038:     [38;5;203mlist.list(T),[39;49m
type_error_in_arg.m:038:   expected type was
type_error_in_arg.m:038:     [38;5;40mcord.cord(int).[39;49m
